update nashorn & hikaricp version